--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -51,12 +51,17 @@ $text-color: #ffffff; /* White for text */
 
 .backgroundImage {
   background-image: url('../../assets/images/town_2.png');
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  overflow: hidden;
-  width: 100vw;
+  background-position: center; // Center the background image
+  background-size: cover; // Cover the entire area of the element
+  position: fixed; // Position fixed to the viewport
+  top: 0;
+  left: 0;
+  width: 100vw; // Full viewport width
+  height: 100vh; // Full viewport height
+  z-index: 5; // Ensure it's below other overlay elements
+  overflow: hidden; // Prevent any overflow from the image
 }
+
 
 .bottomUIContainer {
   position: fixed;
@@ -66,7 +71,7 @@ $text-color: #ffffff; /* White for text */
   display: flex;
   flex-direction: column;
   padding: 25px;
-  z-index: 30;
+  z-index: 30; // UI elements above the fog but below the Spline object
   background-color: rgba(0, 0, 0, 0.5);
   color: $text-color;
 }
@@ -77,7 +82,7 @@ $text-color: #ffffff; /* White for text */
   position: fixed;
   bottom: 0%;
   right: 2%;
-  z-index: 40;
+  z-index: 40; // Ensuring interactive elements are accessible
 }
 
 .powerButton {
@@ -118,9 +123,21 @@ $text-color: #ffffff; /* White for text */
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9); /* Dark initial overlay for a denser fog effect */
+  background-color: rgba(0, 0, 0, 0.9);
   pointer-events: none;
   mix-blend-mode: multiply;
+  z-index: 10; // Below the Spline object but above the background
+}
+
+/* Spline object specific styles */
+.splineObject {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 20; // Ensure this is above the fog overlay
+  pointer-events: none; // Allow clicks to pass through, if needed
 }
 
 /* Add any additional media queries as needed */
