--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -50,7 +50,14 @@ $text-color: #ffffff; /* White for text */
 }
 
 .backgroundImage {
-  background-image: url('../../assets/images/town_2.png');
+  // background-image: url('../../assets/images/town_2.png');
+  // background-image: url('../../assets/images/purple_0.png');
+  // background-image: url('../../assets/images/red_tree.png');
+  // background-image: url('../../assets/images/red_block.png');
+  // background-image: url('../../assets/images/nexoliths.png');
+  background-image: url('../../assets/images/nexoliths_9.png');
+  // background-image: url('../../assets/images/waste_0.png');
+  // background-image: url('../../assets/images/nowhere_bridge.png');
   background-position: center; // Center the background image
   background-size: cover; // Cover the entire area of the element
   position: fixed; // Position fixed to the viewport
