--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -130,12 +130,11 @@ $text-color: #ffffff; /* White for text */
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.25); // Start with a darker overlay
   pointer-events: none;
   mix-blend-mode: multiply;
   z-index: 10; // Below the Spline object but above the background
 }
-
 /* Spline object specific styles */
 .splineObject {
   position: fixed;
