--- a/svc/hecate/src/common/components/echo-screens/home-screen/echo.module.scss
+++ b/svc/hecate/src/common/components/echo-screens/home-screen/echo.module.scss
@@ -43,9 +43,8 @@ html, body {
 }
 
 .parentContainer {
-  height: 80vh;
   display: flex;
-  flex-direction: column;
+  height: 80vh;
   box-shadow: 0 0 10px $background-dark, inset 0 0 20px $accent-color;
   border-radius: 15px;
   overflow: hidden;
@@ -54,11 +53,8 @@ html, body {
 }
 
 .sidebar {
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  width: 10%;
-  height: 80%;
+  flex: 0 0 10%;
+  height: 100%;
   background: $background-light-2;
   border-right: 3px solid $accent-color;
   box-shadow: inset 0 0 10px $accent-color;
@@ -67,32 +63,40 @@ html, body {
   padding-left: 20px;
 }
 
-.mainContent {
+.mainScreenContent {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px; /* Left padding to ensure content doesn't touch sidebar */
+  padding-right: 20px; /* Right padding for symmetry */
 }
 
-.button, .link, .sidebar li {
-  &:hover {
-    color: $hover-color;
-    animation: neonGlow 2s infinite;
-  }
+/* Specific padding for text content */
+.mainScreenContent .echoContent, .mainScreenContent .echoTitle {
+  padding: 0 5%; /* Additional left and right padding for text elements */
 }
 
 @media (max-width: 768px) {
+  .parentContainer {
+    flex-direction: column;
+  }
+
   .sidebar {
-    position: fixed;
     width: 100%;
     bottom: 0;
     height: 60px;
     overflow-x: auto;
     border-top: 3px solid $accent-color;
     z-index: 5;
+    flex: none;
+    position: fixed;
   }
 
-  .mainContent {
+  .mainScreenContent {
     margin-bottom: 80px;
+    width: 100%;
+    padding-left: 0; /* Remove left padding on mobile */
+    padding-right: 0; /* Remove right padding on mobile */
   }
 }
-
