--- a/svc/hecate/src/common/components/echo-screens/home-screen/echo.module.scss
+++ b/svc/hecate/src/common/components/echo-screens/home-screen/echo.module.scss
@@ -61,9 +61,13 @@ html, body {
   border-right: 3px solid $accent-color;
   box-shadow: inset 0 0 10px $accent-color;
   animation: neonGlow 2s ease-in-out infinite alternate;
-  text-align: left;
-  padding-left: 20px;
+  display: flex; /* Add display flex */
+  flex-direction: column; /* Change to column layout */
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+  padding: 10px; /* Add minimal padding */
 }
+
 
 .mainScreenContent {
   flex: 1;
